--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "header",
+  "name": "header-component-react",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -35,5 +34,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "Header.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nush100/header_component.git"
+  },
+  "keywords": [
+    "react",
+    "header"
+  ],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nush100/header_component/issues"
+  },
+  "homepage": "https://github.com/Nush100/header_component#readme"
 }
